apps/ollama/cnp-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-app-ingress
  namespace: ollama
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: openwebui
            app: openwebui
        - matchLabels:
            io.kubernetes.pod.namespace: suggestarr
            app: suggestarr
      toPorts:
        - ports:
            - port: "11434"
              protocol: TCP
